--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
  <div class="container">
         <div class="toolbar">
-            <a href="#" class="logo">HIPSEARCH</a>
+            <a href="#" class="logo">HannahsEtsy</a>
             <form>
-                <input type="search">
+                <input type="submit" class="submit">
+                <input type="search" class="search">
             </form>
         </div>
         <div class="grid grid-2-400 grid-4-800">
